# sandbox-gpu

./: .gitattributes
cuda/cuda_by_example/: 1_init_examples.sln  README.md
cuda/cuda_by_example/1_simple_add/: 1_simple_add.vcxproj  simple_add.cu
cuda/cuda_by_example/2_device_info/: 2_device_info.vcxproj  device_info.cu
cuda/cuda_by_example/3_vectors/: 3_vectors.vcxproj  vectors.cu
cuda/cuda_by_example/4_julia/: 4_julia.vcxproj  julia.cu
cuda/cuda_by_example/_common_libs/: _common_libs.vcxitems  _common_libs.vcxitems.filters  bitmap.h  handlers.h  helpers.h
cuda/cuda_by_example/_common_libs/GL/: glext.h
cuda/fractals/Julia_GL/: Julia-GL.sln  Julia-GL.vcxproj  Julia-GL.vcxproj.filters  README.md  julia.cu
cuda/fractals/Julia_GL/lib/: bitmap.h  handlers.h  helpers.h  includes.h
cuda/fractals/Julia_VK/: CMakeLists.txt  build-cmake.ps1  build-mingw.ps1
cuda/fractals/Julia_VK/cmake/: arch.cmake
cuda/fractals/Julia_VK/src/: fractal-julia.c
opencl/csc-gpu-calc/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build32.ps1  build64.ps1
opencl/csc-gpu-calc/lib/: CMakeLists.txt  logger.h  utils.h
opencl/csc-gpu-calc/src/: CMakeLists.txt  main.cpp  main.h
opencl/csc-gpu-calc/src/tasks/: task1.cpp
opencl/csc-gpu-calc/test/: CMakeLists.txt
